@@ -7,6 +7,9 @@ QXmpp 0.6.2 (UNRELEASED)
   - Improve SASL code test coverage.
   - Improve QXmppMessage test coverage.
   - Add a "reason" argument to QXmppRosterManager's subscription methods.
+  - Refactor QXmppPresence:
+    * add availableStatusType(), priority(), statusText()
+    * deprecate QXmppPresence::Status
 
 QXmpp 0.6.1 (Jul 20, 2012)
 --------------------------
